--- a/app/src/main/res/navigation/nav_button.xml
+++ b/app/src/main/res/navigation/nav_button.xml
@@ -23,7 +23,11 @@
         android:id="@+id/favoriteFragment"
         android:name="com.example.foodplanneritiandroidjava.view.favorite.FavoriteFragment"
         android:label="fragment_favorite"
-        tools:layout="@layout/fragment_favorite" />
+        tools:layout="@layout/fragment_favorite" >
+        <action
+            android:id="@+id/action_favoriteFragment_to_mealDetailsFragment"
+            app:destination="@id/mealDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/plansFragment"
         android:name="com.example.foodplanneritiandroidjava.view.plans.PlansFragment"
