--- a/app/src/main/res/navigation/nav_button.xml
+++ b/app/src/main/res/navigation/nav_button.xml
@@ -59,4 +59,9 @@
             app:argType="string"
             app:nullable="true" />
     </fragment>
+    <fragment
+        android:id="@+id/noInternetFragment"
+        android:name="com.example.foodplanneritiandroidjava.NoInternetFragment"
+        android:label="fragment_no_internet"
+        tools:layout="@layout/fragment_no_internet" />
 </navigation>
