working on planned Meals feature

--- a/app/src/main/res/layout/fragment_plans.xml
+++ b/app/src/main/res/layout/fragment_plans.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.plans.PlansFragment">
+    tools:context=".view.plans.PlansFragment" >
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/tv_plan"
+        style="@style/TextAppearance.Compat.Notification.Media"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium"
+        android:fontFamily="@font/poppins_bold"
+        android:lineSpacingMultiplier="@dimen/medium"
+        android:text="@string/plannedmeals"
+        android:textColor="@color/design_default_color_primary_dark"
+        android:textColorHighlight="?android:attr/textColorLinkInverse"
+        android:textColorHint="?android:attr/windowBackgroundFallback"
+        android:textColorLink="?android:attr/colorPressedHighlight"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_plan" />
+</androidx.constraintlayout.widget.ConstraintLayout>
