--- a/app/src/main/res/drawable/deleteicon.xml
+++ b/app/src/main/res/drawable/deleteicon.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="100dp"
-    android:height="100dp"
+    android:width="50sp"
+    android:height="50sp"
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
