--- a/app/src/main/res/layout/fragment_plans.xml
+++ b/app/src/main/res/layout/fragment_plans.xml
@@ -10,21 +10,22 @@
         android:id="@+id/planned_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/week_planned_mealsText" />
+        app:layout_constraintTop_toBottomOf="@+id/week_Plan_Text" />
 
     <TextView
-        android:id="@+id/week_planned_mealsText"
-        style="@style/Widget.AppCompat.TextView"
+        android:id="@+id/week_Plan_Text"
+        style="@android:style/Widget.DeviceDefault.Light.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/plannedmeals"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="36dp"
+        android:text="@string/plannedMeals"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="25sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
