--- a/app/src/main/res/layout/plan_row.xml
+++ b/app/src/main/res/layout/plan_row.xml
@@ -7,7 +7,7 @@
     android:layout_margin="8dp"
     android:backgroundTint="@color/white"
     app:cardCornerRadius="25dp"
-    app:cardElevation="@dimen/material_emphasis_medium">
+    app:cardElevation="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             tools:text="Day of the Week" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cv_meal"
+            android:id="@+id/mealCardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -72,7 +72,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/plan_image_meal"
                     tools:text="Meal Name" />
 
-                <ImageButton
+                <ImageView
                     android:id="@+id/plan_favorite_icon"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
