--- a/app/src/main/res/navigation/nav_button.xml
+++ b/app/src/main/res/navigation/nav_button.xml
@@ -18,7 +18,11 @@
         android:id="@+id/searchFragment"
         android:name="com.example.foodplanneritiandroidjava.view.search.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_mealDetailsFragment"
+            app:destination="@id/mealDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.foodplanneritiandroidjava.view.favorite.FavoriteFragment"
@@ -32,7 +36,11 @@
         android:id="@+id/plansFragment"
         android:name="com.example.foodplanneritiandroidjava.view.plans.PlansFragment"
         android:label="fragment_plans"
-        tools:layout="@layout/fragment_plans" />
+        tools:layout="@layout/fragment_plans" >
+        <action
+            android:id="@+id/action_plansFragment_to_mealDetailsFragment"
+            app:destination="@id/mealDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/mealFragment"
         android:name="com.example.foodplanneritiandroidjava.view.meal.MealFragment"
