--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -1,7 +1,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/mainDrawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.home.HomeActivity">
@@ -21,7 +21,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navGraph="@navigation/nav_button" />
+            app:navGraph="@navigation/nav_button"
+            />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_button"
@@ -32,6 +33,8 @@
             app:menu="@menu/button_bar_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <!-- Drawer contents -->
     <com.google.android.material.navigation.NavigationView
