--- a/app/src/main/res/menu/button_bar_menu.xml
+++ b/app/src/main/res/menu/button_bar_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/favoritesitem"
         android:title="@string/favorites_item" />
     <item
-        android:id="@+id/homeFragment"
+        android:id="@+id/homeFragment2"
         android:icon="@drawable/home_itm"
         android:title="@string/home_item" />
     <item
