--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        tools:context=".view.home.HomeFragment">
+        tools:context=".view.home.homeActivity.HomeFragment">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/dailyMealCardView"
