--- a/app/src/main/res/navigation/nav_button.xml
+++ b/app/src/main/res/navigation/nav_button.xml
@@ -3,16 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_button"
-    app:startDestination="@id/homeFragment2">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/homeFragment2"
-        android:name="com.example.foodplanneritiandroidjava.view.home.HomeFragment"
+        android:id="@+id/homeFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.home.homeActivity.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_mealFragment"
             app:destination="@id/mealFragment"
             app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_homeFragment_to_mealFragment2"
+            app:destination="@id/mealFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
