--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,17 @@
     <style name="Base.Theme.FoodPlanneritiAndroidJava" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+
+    </style>
+
+    <style name="LottieAnimation">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">350dp</item>
+        <item name="android:visibility">gone</item>
+        <item name="lottie_autoPlay">true</item>
+        <item name="lottie_loop">true</item>
+        <item name="backgroundTint">@android:color/transparent</item>
     </style>
 
     <style name="Theme.FoodPlanneritiAndroidJava" parent="Base.Theme.FoodPlanneritiAndroidJava" />
